[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/monochrome_packed.png" type="Texture" id=1]
[ext_resource path="res://src/Test/FrameFinder.gd" type="Script" id=2]
[ext_resource path="res://src/OneBitSprite.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -129.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ScrollContainer"]
margin_right = 1536.0
margin_bottom = 704.0
rect_min_size = Vector2( 1536, 704 )
texture = ExtResource( 1 )
expand = true

[node name="FrameLabel" type="Label" parent="."]
margin_top = 519.016
margin_right = 40.0
margin_bottom = 533.016
text = "Frame: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameSprite" parent="." instance=ExtResource( 3 )]
position = Vector2( 115.966, 511.945 )
[connection signal="gui_input" from="ScrollContainer/TextureRect" to="." method="_on_TextureRect_gui_input"]
